--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,39 @@ img {
 }
 
 /*==========02.Index==========*/
+.loading {
+  width: 100%;
+  height: 100vh;
+  background-color: #DDDDDD;
+  z-index: 100;
+  position: absolute;
+}
+.loading::after{
+  display: block;
+  content: "";
+  width: 100px;
+  height: 100px;
+  border: 12px solid #DDDDDD;
+  border-color: #000 transparent;
+  border-radius: 50%;
+  animation: run 1.5s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+ @keyframes run {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg) ;
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg) ;
+  }
+}
+
 .card-text {
   overflow: hidden;
   text-overflow: ellipsis;
-  /*white-space: nowrap;*/
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
@@ -145,4 +174,21 @@ footer {
   font-size: 14px;
   line-height: 50px;
   margin-bottom: -1rem;
+}
+
+/*==========07.Popular==========*/
+.rank_score {
+  font-size: 15px;
+}
+.rank_name {
+  display: flex;
+  align-items: center;
+}
+.rank_text {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  white-space: normal;
 }
